[package]
edition = "2021"
name    = "register-actix-routes"
version = "0.1.1"
license = "MIT"
description = "Macro designed to simplify the registration of routes in an Actix Web application"

[dependencies]
once_cell   = "1.20.2"
proc-macro2 = "1.0.89"
quote       = "1.0.37"
syn         = { version = "2.0.87", features = ["full"] }
tabled      = "0.17.0"

[lib]
proc-macro = true
